--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,5 +32,9 @@
     <string name="chat_msg_friends_more">来自 %1$s 等%2$d位好友的通信录</string>
     <string name="album_photo_count">共 %1$d 张</string>
     <string name="choose_photo_finish">完成(%1$d/%2$d)</string>
+    <string name="errcode_success">发送成功</string>
+    <string name="errcode_cancel">发送取消</string>
+    <string name="errcode_deny">发送被拒绝</string>
+    <string name="errcode_unknown">发送返回</string>
 
 </resources>
