--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="errcode_cancel">发送取消</string>
     <string name="errcode_deny">发送被拒绝</string>
     <string name="errcode_unknown">发送返回</string>
+    <string name="share_title">"friends+：重新定义社交"</string>
+    <string name="share_summary">"\"朋友圈\" 太小？快来认识朋友的朋友吧！friends+，创建只属于你的新社交。基于通讯录关系的二度交友应用"</string>
 
 </resources>
